--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="container py-base">
-      <nav class="flex items-center">
+      <nav class="flex items-center gap-1.5">
         <a href="#">
           <img src="assets/logo.svg" alt="Logo Zingen">
         </a>
